--- a/src/app/tools/reszletek/reszletek.component.html
+++ b/src/app/tools/reszletek/reszletek.component.html
@@ -2,7 +2,7 @@
   <h5>{{cim}} részletesen</h5>
   <table>
     <tbody>
-    <tr *ngFor="let colset of colsets; let i = index" (click)="RowClick(i)" [className]="i === selectedindex ? 'active' : 'inactive'">
+    <tr *ngFor="let colset of colsets; let i = index" (click)="rowClick(i)" [className]="i === selectedindex ? 'active' : 'inactive'">
       <td class="editform-label">{{colset.Title}}:</td>
       <td>
         <div *ngIf="colset.Type === 'INT'">{{item[colset.Name]}}</div>
@@ -16,3 +16,4 @@
     </tbody>
   </table>
 </div>
+
