--- a/src/app/common/egyszeru-kerdes-uzenet/egyszeru-kerdes-uzenet.component.html
+++ b/src/app/common/egyszeru-kerdes-uzenet/egyszeru-kerdes-uzenet.component.html
@@ -5,5 +5,5 @@
     <button class="toolbutton okbutton" (click)="doOk()">Ok</button>
     <button class="toolbutton" (click)="doCancel()">Mégsem</button>
   </div>
-  <div *ngIf="!okcancel" class="editform-row">{{uzenet}}</div>
+  <div *ngIf="!okcancel" class="editform-row">{{_uzenet}}</div>
 </div>
