--- a/src/app/01 Torzsadatok/08 Tevekenyseg/tevekenyseg-szerkesztes/tevekenyseg-szerkesztes.component.html
+++ b/src/app/01 Torzsadatok/08 Tevekenyseg/tevekenyseg-szerkesztes/tevekenyseg-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="editform-row">
       <div class="editform-label">Tevékenység</div>
-      <input type="text" class="editform-combo primitivwidth" appAutofocus formControlName="tevekenyseg">
+      <input type="text" class="editform-edit primitivwidth" appAutofocus formControlName="tevekenyseg">
     </div>
 
     <div class="editform-row-bottom">
