--- a/src/app/05 Segedeszkozok/03 Felhasznalo/esemenynaplo/esemenynaplo.component.html
+++ b/src/app/05 Segedeszkozok/03 Felhasznalo/esemenynaplo/esemenynaplo.component.html
@@ -18,7 +18,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let item of Dto; let i = index" (click)="RowClick(i)" [className]="i === selectedindex ? 'active' : 'inactive'">
+    <tr *ngFor="let item of Dto; let i = index" (click)="rowClick(i)" [className]="i === selectedindex ? 'active' : 'inactive'">
       <td>{{item.Esemenynaplokod}}</td>
       <td>{{item.Idopont | datetimehun}}</td>
       <td>{{item.Particio}}</td>
