--- a/src/app/05 Segedeszkozok/03 Felhasznalo/felhasznalo-list/felhasznalo-list.component.html
+++ b/src/app/05 Segedeszkozok/03 Felhasznalo/felhasznalo-list/felhasznalo-list.component.html
@@ -8,82 +8,21 @@
                [enUj]="jog" (Uj)="doUjtetel()"
                [visZoom]="zoom" (StopZoom)="onStopzoom()">
   </app-toolbar>
-  <app-tabla #tabla
-             [items]="Dto"
-             [colsets]="felhasznaloservice.GridSettings"
-             [zoom]="zoom"
-             (forzoom)="onStartzoom($event)"
-             (forid)="onId($event)"
-             [ujTemplate]="griduj"
-             [egyTemplate]="gridegy">
-  </app-tabla>
-
-  <ng-template #griduj>
-    <app-felhasznalo-szerkesztes [uj] = "true"
-                                 (eventSzerkeszteskesz)="onUjtetelkesz($event)">
-    </app-felhasznalo-szerkesztes>
-  </ng-template>
+  <app-tabla-ex #tabla
+                [items]="Dto"
+                [colsets]="felhasznaloservice.GridSettings"
+                [zoom]="zoom"
+                (forzoom)="onStartzoom($event)"
+                (forid)="onId($event)"
+                [egyTemplate]="gridegy">
+  </app-tabla-ex>
 
   <ng-template #gridegy>
-    <div class="alapkeret">
-      <div class="tabla-toolbar">
-        <button (click)="doNav(1)" class="toolbutton">
-          <i class="fa fa-file" aria-hidden="true"></i>
-        </button>
-        <button [disabled]="!jog" (click)="doNav(2)" class="toolbutton">
-          <i class="fa fa-minus" aria-hidden="true"></i>
-        </button>
-        <button [disabled]="!jog" (click)="doNav(3)" class="toolbutton">
-          <i class="fa fa-edit" aria-hidden="true"></i>
-        </button>
-
-        <button [disabled]="!jog" (click)="doNav(4)" class="toolbutton">
-          Jelszó
-        </button>
-        <button [disabled]="!jog" (click)="doNav(5)" class="toolbutton">
-          Tevékenység
-        </button>
-      </div>
-
-      <ng-container *ngIf="egymode === 1">
-        <div [@rowanimation]>
-          <app-reszletek [cim]="felhasznaloservice.cim"
-                         [item]="Dto[DtoSelectedIndex]"
-                         [colsets]="felhasznaloservice.ReszletekSettings">
-          </app-reszletek>
-        </div>
-      </ng-container>
-      <ng-container *ngIf="egymode === 2">
-        <div [@rowanimation]>
-          <app-tetel-torles [cim]="felhasznaloservice.cim"
-                            (eventTorles)="onTorles($event)">
-          </app-tetel-torles>
-        </div>
-      </ng-container>
-      <ng-container *ngIf="egymode === 3">
-        <div [@rowanimation]>
-          <app-felhasznalo-szerkesztes [uj]="false"
-                                       [DtoOriginal]="Dto[DtoSelectedIndex]"
-                                       (eventSzerkeszteskesz)="onModositaskesz($event)">
-          </app-felhasznalo-szerkesztes>
-        </div>
-      </ng-container>
-
-      <ng-container *ngIf="egymode === 4">
-        <div [@rowanimation]>
-          <app-felhasznalo-jelszo [DtoOriginal]="Dto[DtoSelectedIndex]"
-                                  (eventSzerkeszteskesz)="onModositaskesz($event)">
-          </app-felhasznalo-jelszo>
-        </div>
-      </ng-container>
-
-      <ng-container *ngIf="egymode === 5">
-        <div [@rowanimation]>
-          <app-esemenynaplo [Felhasznalokod]="Dto[DtoSelectedIndex].Felhasznalokod">
-          </app-esemenynaplo>
-        </div>
-      </ng-container>
-    </div>
-
+    <app-felhasznalo-egy [uj]="uj"
+                         [dto]="Dto[DtoSelectedIndex]"
+                         (eventUj)="onUjtetelkesz($event)"
+                         (eventTorles)="onTorles()"
+                         (eventModositas)="onModositaskesz($event)">
+    </app-felhasznalo-egy>
   </ng-template>
 </div>
