--- a/src/app/01 Torzsadatok/06 Cikk/cikk-szerkesztes/cikk-szerkesztes.component.html
+++ b/src/app/01 Torzsadatok/06 Cikk/cikk-szerkesztes/cikk-szerkesztes.component.html
@@ -10,15 +10,17 @@
       </div>
 
       <div class="editform-row">
-        <div class="editform-label">Me</div>
-        <input type="text" class="editform-edit zoomedit kisprimitivwidth" formControlName="me">
-        <button class="toolbutton" type="button" (click)="MeZoom()">...</button>
-      </div>
+        <div class="editform-row-block">
+          <div class="editform-label">Me</div>
+          <input type="text" class="editform-edit zoomedit kisprimitivwidth" formControlName="me">
+          <button class="toolbutton" type="button" (click)="MeZoom()">...</button>
+        </div>
 
-      <div class="editform-row">
-        <div class="editform-label">ÁFA kulcs</div>
-        <input type="text" class="editform-edit zoomedit kisprimitivwidth" formControlName="afakulcs">
-        <button class="toolbutton" type="button" (click)="AfakulcsZoom()">...</button>
+        <div class="editform-row-block">
+          <div class="editform-label">ÁFA kulcs</div>
+          <input type="text" class="editform-edit zoomedit kisprimitivwidth" formControlName="afakulcs">
+          <button class="toolbutton" type="button" (click)="AfakulcsZoom()">...</button>
+        </div>
       </div>
 
       <div class="editform-row">
@@ -28,7 +30,7 @@
 
       <div class="editform-row">
         <div class="editform-label">Készletet képez</div>
-        <select class="editform-combo" formControlName="kk">
+        <select type="text" class="editform-combo" formControlName="kk">
           <option [ngValue]="false">Nem</option>
           <option [ngValue]="true">Igen</option>
         </select>
@@ -67,24 +69,8 @@
     </div>
   </form>
 
-  <div id="cikkzoombox" class="zoom-modal" role="dialog"  data-backdrop="false" data-keyboard="false">
-    <div class="zoom-modal-content-primitive">
-      <ng-container *ngIf="SzerkesztesMode === 1">
-        <app-me-list [maszk]="DtoEdited.Me || ''"
-                     (eventSelectzoom)="onMeSelectzoom($event)"
-                     (eventStopzoom)="onMeStopzoom()"></app-me-list>
-      </ng-container>
-      <ng-container *ngIf="SzerkesztesMode === 2">
-        <app-afakulcs-list [maszk]="DtoEdited.Afakulcs || ''"
-                           (eventSelectzoom)="onAfakulcsSelectzoom($event)"
-                           (eventStopzoom)="onAfakulcsStopzoom()"></app-afakulcs-list>
-      </ng-container>
-      <ng-container *ngIf="SzerkesztesMode === 3">
-        <app-termekdij-list [maszk]="DtoEdited.Termekdijkt || ''"
-                            (eventSelectzoom)="onTermekdijSelectzoom($event)"
-                            (eventStopzoom)="onTermekdijStopzoom()"></app-termekdij-list>
-      </ng-container>
-    </div>
-  </div>
+  <jw-modal [id]="modalname" bodyclass="jw-modal-body-primitive">
+    <ng-template #compcont_cikkszerk></ng-template>
+  </jw-modal>
 </div>
 
