--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -46,3 +46,66 @@
   width: 20em;
   height: 100%;
 }
+
+
+
+
+jw-modal {
+  /* modals are hidden by default */
+  display: none;
+
+  .jw-modal {
+    /* modal container fixed across whole screen */
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    /* z-index must be higher than .jw-modal-background */
+    z-index: 1000;
+
+    /* enables scrolling for tall modals */
+    overflow: auto;
+
+    .jw-modal-body-primitive {
+      padding: 1em;
+      background: $hatterszin;
+
+      margin: 20% auto;
+      width: 30%;
+      min-width: 300px;
+      border: $zoomszin 3px solid;
+    }
+
+    .jw-modal-body-complex {
+      padding: 1em;
+      background: $hatterszin;
+
+      margin: 20% auto;
+      width: 80%;
+      min-width: 300px;
+      border: $zoomszin 3px solid;
+    }
+  }
+
+  .jw-modal-background {
+    /* modal background fixed across whole screen */
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    /* semi-transparent black  */
+    background-color: rgba(0,0,0,0.4);
+
+    /* z-index must be below .jw-modal and above everything else  */
+    z-index: 900;
+  }
+}
+
+body.jw-modal-open {
+  /* body overflow is hidden to hide main scrollbar when modal window is open */
+  overflow: hidden;
+}
