--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -104,3 +104,18 @@ input[type="file"] {
 .em100width {
   width: 100em;
 }
+
+#GoTopBtn {
+  display: none;
+  position: fixed;
+  bottom: 1em;
+  right: 2em;
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: red;
+  color: white;
+  cursor: pointer;
+  padding: 0.5em;
+  border-radius: 0.3em;
+}
