--- a/src/app/01 Torzsadatok/09 Ugyfel/ugyfel-projekt/ugyfel-projekt.component.html
+++ b/src/app/01 Torzsadatok/09 Ugyfel/ugyfel-projekt/ugyfel-projekt.component.html
@@ -1,4 +1,6 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
-  <!--<h5>Projektek</h5>-->
-  <!--<app-projekt-tabla [Dto]="ProjektDto" [enIdclick]="false"></app-projekt-tabla>-->
+  <h5>Projektek</h5>
+  <app-projekt-tabla [Dto]="ProjektDto"
+                     [enIdclick]="false">
+  </app-projekt-tabla>
 </div>
