a fotózás link és az ügyféltér még nem újult meg!

--- a/src/app/02 Eszkozok/02 Irat/fotozas-link/fotozas-link.component.html
+++ b/src/app/02 Eszkozok/02 Irat/fotozas-link/fotozas-link.component.html
@@ -12,7 +12,7 @@
 
   <ng-container *ngIf="link !== ''">
     <div>
-      <textarea rows="3" cols="100" id="regilink" disabled="true" [(ngModel)]="link"></textarea>
+      <!--<textarea rows="3" cols="100" id="regilink" disabled="true" [(ngModel)]="link"></textarea>-->
     </div>
     <div>
       {{kikuldesikodidopontja}}
@@ -21,7 +21,6 @@
 
 
   <ng-container *ngIf="egymode === 3">
-    <div [@rowanimation]>
       <div class="alapkeret">
         <h5>Új fotózás link</h5>
         <div class="editform-row">Ha új fotózás linket készít, a régi érvényessége megszűnik. Biztos benne?</div>
@@ -30,14 +29,11 @@
           <button class="toolbutton" (click)="onMegsem()">Mégsem</button>
         </div>
       </div>
-    </div>
   </ng-container>
 
   <ng-container *ngIf="egymode === 2">
-    <div [@rowanimation]>
         <app-tetel-torles [cim]="'Fotózás link'"
                           (eventTorles)="onTorles($event)">
         </app-tetel-torles>
-    </div>
   </ng-container>
 </div>
