--- a/src/app/02 Eszkozok/03 Penztar/penztar/penztar-szerkesztes/penztar-szerkesztes.component.html
+++ b/src/app/02 Eszkozok/03 Penztar/penztar/penztar-szerkesztes/penztar-szerkesztes.component.html
@@ -21,14 +21,8 @@
     </div>
   </form>
 
-  <div id="penztarzoombox" class="zoom-modal" role="dialog"  data-backdrop="false" data-keyboard="false">
-    <div class="zoom-modal-content-primitive">
-      <ng-container *ngIf="SzerkesztesMode === 1">
-        <app-penznem-list [maszk]="DtoEdited.Penznem || ''"
-                          (eventSelectzoom)="onPenznemSelectzoom($event)"
-                          (eventStopzoom)="onPenznemStopzoom()"></app-penznem-list>
-      </ng-container>
-    </div>
-  </div>
+  <jw-modal [id]="modalname" [bodyclass]="bodyclass">
+    <ng-template #compcont_penztarszerk></ng-template>
+  </jw-modal>
 </div>
 
