--- a/src/app/02 Eszkozok/05 Felmeres/felmeres-egy/felmeres-egy.component.html
+++ b/src/app/02 Eszkozok/05 Felmeres/felmeres-egy/felmeres-egy.component.html
@@ -1,6 +1,8 @@
 <div [ngClass]="!uj ? 'alapkeret' : ''" [appSpinner]="eppFrissit">
   <app-felmeres-egy-toolbar *ngIf="!uj"
                             [ProjektBol]="ProjektBol"
+                            [ProjektDto]="ProjektDto"
+                            [dto]="Dto"
                             [dokcim]="dokcim"
                             (eventNav)="doNav($event)">
   </app-felmeres-egy-toolbar>
