--- a/src/app/05 Segedeszkozok/08 Vagolap/vagolap/vagolap.component.html
+++ b/src/app/05 Segedeszkozok/08 Vagolap/vagolap/vagolap.component.html
@@ -1,9 +1,9 @@
 <div class="alapkeret">
-  <h5 *ngIf="vagolapservice.Mode === 1">{{vagolapservice.cim}}</h5>
+  <h5 *ngIf="Mode === 1">{{vagolapservice.cim}}</h5>
 
-  <ng-container *ngIf="vagolapservice.Mode === 1">
+  <ng-container *ngIf="Mode === 1">
     <div class="toolbar">
-      <button [disabled]="eppFrissit" (click)="torles()" class="toolbutton">
+      <button (click)="doTorles()" class="toolbutton">
         A vágólap törlése
       </button>
     </div>
@@ -22,7 +22,7 @@
     </thead>
     <tbody>
     <tr *ngFor="let item of vagolapservice.Dto; let i = index">
-      <td><input type="checkbox" [(ngModel)] = "item.selected" [disabled]="isdisabled(i)" /></td>
+      <td><input type="checkbox" value="item.selected" [disabled]="isdisabled(i)" /></td>
       <td *ngIf="item.tipus === 0">{{item.iratkod}}</td>
       <td *ngIf="item.tipus === 1">{{item.bizonylatkod}}</td>
       <td *ngIf="item.tipus === 0"></td>
