--- a/src/app/02 Eszkozok/01 Projekt/projekt/projekttabla/projekt-tabla.component.html
+++ b/src/app/02 Eszkozok/01 Projekt/projekt/projekttabla/projekt-tabla.component.html
@@ -24,9 +24,9 @@
   </tr>
   </thead>
   <tbody>
-    <tr *ngIf="ujtetel && ujTemplate !== undefined" class="active">
+    <tr *ngIf="ujtetel && egyTemplate !== undefined" class="active">
       <td colspan="100">
-        <ng-template *ngTemplateOutlet="ujTemplate"></ng-template>
+        <ng-template *ngTemplateOutlet="egyTemplate"></ng-template>
       </td>
     </tr>
 
@@ -87,7 +87,7 @@
         <td colspan="100">{{item.Megjegyzes}}</td>
       </tr>
 
-      <tr *ngIf="i === clickedidindex && egyTemplate !== undefined" [class.active]="i === clickedidindex">
+      <tr *ngIf="egytetel && i === clickedidindex && egyTemplate !== undefined" [class.active]="i === clickedidindex">
         <td colspan="100">
           <ng-template *ngTemplateOutlet="egyTemplate"></ng-template>
         </td>
