--- a/src/app/02 Eszkozok/01 Projekt/projektkapcsolat/projektkapcsolat-list/projektkapcsolat-list.component.html
+++ b/src/app/02 Eszkozok/01 Projekt/projektkapcsolat/projektkapcsolat-list/projektkapcsolat-list.component.html
@@ -27,6 +27,7 @@
 
   <ng-template #egykapcsolat>
     <app-projektkapcsolat-egy [egymode]="egymode"
+                              [Projektkod] = "Projektkod"
                               [projektkapcsolatDto]="Dto[DtoSelectedIndex]"
                               (eventUj)="onUjutan($event)"
                               (eventTorles)="onTorlesutan()"
