--- a/src/app/02 Eszkozok/01 Projekt/projektkapcsolat/projektkapcsolat-ujbizonylat/projektkapcsolat-ujbizonylat.component.html
+++ b/src/app/02 Eszkozok/01 Projekt/projektkapcsolat/projektkapcsolat-ujbizonylat/projektkapcsolat-ujbizonylat.component.html
@@ -5,8 +5,8 @@
 
     <div class="editform-row">
       <div class="editform-label">Bizonylattipus</div>
-      <select type="text" class="editform-combo" formControlName="bizonylattipus">
-        <option *ngFor="let s of bizonylatservice.tipusok; let i = index" [value]="i" [disabled]=s[2]>{{s[0]}}</option>
+      <select class="editform-combo" formControlName="bizonylattipus">
+        <option *ngFor="let s of bizonylatservice.tipusok; let i = index" [ngValue]="i" [disabled]=s[2]>{{s[0]}}</option>
       </select>
     </div>
 
