--- a/src/app/02 Eszkozok/01 Projekt/projektkapcsolat/projektkapcsolat-list/projektkapcsolat-list.component.html
+++ b/src/app/02 Eszkozok/01 Projekt/projektkapcsolat/projektkapcsolat-list/projektkapcsolat-list.component.html
@@ -30,8 +30,8 @@
                               [Projektkod] = "Projektkod"
                               [projektkapcsolatDto]="Dto[DtoSelectedIndex]"
                               (eventUj)="onUjutan($event)"
-                              (eventTorles)="onTorlesutan()"
-                              (eventModositas)="onModositasutan($event)">
+                              (eventModositas)="onModositasutan($event)"
+                              (eventLevalasztasutan)="onLevalasztasutan()">
     </app-projektkapcsolat-egy>
   </ng-template>
 </div>
