--- a/src/app/02 Eszkozok/02 Irat/irat/irat-egy/irat-egy.component.html
+++ b/src/app/02 Eszkozok/02 Irat/irat/irat-egy/irat-egy.component.html
@@ -2,6 +2,7 @@
   <app-irat-egy-toolbar *ngIf="!uj"
                         [enTorles]="enTorles"
                         [enProjekt]="enProjekt"
+                        [enLevalasztas]="enLevalasztas"
                         (eventNav)="doNav($event)">
   </app-irat-egy-toolbar>
   <ng-template #compcont_irat></ng-template>
