--- a/src/app/03 Bizonylatok/bizonylat/bizonylat-penztar/bizonylat-penztar.component.html
+++ b/src/app/03 Bizonylatok/bizonylat/bizonylat-penztar/bizonylat-penztar.component.html
@@ -2,7 +2,7 @@
   <h5>{{bizonylatLeiro.BizonylatNev}} pénztári kezelése</h5>
 
   <ng-container *ngIf="penztarDto.length > 0 && !penztarkivalasztva">
-    <div>A bizonylat pénznemének megfelelő nyitott pénztárak a következők, válassza ki a megfelelőt:</div>
+    <div class="editform-row">A bizonylat pénznemének megfelelő nyitott pénztárak a következők, válassza ki a megfelelőt:</div>
     <table>
       <thead>
       <tr>
@@ -61,6 +61,6 @@
   </ng-container>
 
   <ng-container *ngIf="penztarDto.length === 0">
-    <div>Nincs a bizonylat pénznemének megfelelő nyitott pénztár!</div>
+    <div class="editform-row">Nincs a bizonylat pénznemének megfelelő nyitott pénztár!</div>
   </ng-container>
 </div>
