--- a/src/app/03 Bizonylatok/bizonylat/bizonylattermekdijtabla/bizonylattermekdijtabla.component.html
+++ b/src/app/03 Bizonylatok/bizonylat/bizonylattermekdijtabla/bizonylattermekdijtabla.component.html
@@ -10,8 +10,8 @@
   </thead>
   <tbody>
   <ng-container *ngFor="let item of Dto; let i = index">
-    <tr>
-      <td *ngIf="enIdclick" class="tabla-kontrol-id" (click)="setClickedRow(i)">{{item.Bizonylattermekdijkod}}</td>
+    <tr (click)="clickforrow(i)" [className]="i === clickedrowindex ? 'active' : 'inactive'">
+      <td *ngIf="enIdclick" class="tabla-kontrol-id" (click)="clickforid(i)">{{item.Bizonylattermekdijkod}}</td>
       <td *ngIf="!enIdclick">{{item.Bizonylattermekdijkod}}</td>
       <td>{{item.Termekdijkt}}</td>
       <td style="text-align: right">{{item.Ossztomegkg | number: '1.2-2'}}</td>
