--- a/src/app/bizonylat/bizonylat-list/bizonylat-list.component.html
+++ b/src/app/bizonylat/bizonylat-list/bizonylat-list.component.html
@@ -12,7 +12,7 @@
 
   <div appHscroll style="overflow-x: auto;overflow-y: hidden">
     <app-bizonylattabla #tabla
-                        [items]="Dto"
+                        [Dto]="Dto"
                         (forid)="onId($event)"
                         [ujTemplate]="griduj"
                         [egyTemplate]="gridegy">
