--- a/src/app/02 Eszkozok/04 Ajanlatkeres/ajanlatkeres-egy/ajanlatkeres-egy.component.html
+++ b/src/app/02 Eszkozok/04 Ajanlatkeres/ajanlatkeres-egy/ajanlatkeres-egy.component.html
@@ -1,5 +1,6 @@
 <div [ngClass]="!uj ? 'alapkeret' : ''" [appSpinner]="eppFrissit">
   <app-ajanlatkeres-egy-toolbar *ngIf="!uj"
+                                [dto]="Dto"
                                 (eventNav)="doNav($event)">
   </app-ajanlatkeres-egy-toolbar>
   <ng-template #compcont_ajanlatkeres></ng-template>
