--- a/src/app/03 Bizonylatok/bizonylat/bizonylat-egy-toolbar/bizonylat-egy-toolbar.component.html
+++ b/src/app/03 Bizonylatok/bizonylat/bizonylat-egy-toolbar/bizonylat-egy-toolbar.component.html
@@ -45,4 +45,7 @@
     <i class="fa fa-angle-right" aria-hidden="true"></i>
     Vágólapra
   </button>
+  <button *ngIf="enLevalasztas" [disabled]="!jog" (click)="doNav(18)" class="toolbutton">
+    Leválasztás
+  </button>
 </div>
